--- a/pricing.html
+++ b/pricing.html
@@ -218,14 +218,14 @@
         <div class="d-table-cell">
           <div class="container">
             <div class="page-content">
-              <h2>About Us</h2>
+              <h2>Our Pricing</h2>
               <ul>
                 <li>
                   <a href="index.html"
                     >Home <i class="las la-angle-right"></i
                   ></a>
                 </li>
-                <li>About Us</li>
+                <li>Pricing</li>
               </ul>
             </div>
           </div>
@@ -328,7 +328,7 @@
                       top: 3px;
                     "
                   ></i>
-                  Consultation for basic legal queries
+                  Company Profile/Pitch Deck
                 </li>
                 <li
                   style="
@@ -349,7 +349,7 @@
                       top: 3px;
                     "
                   ></i>
-                  Document review (up to 5 pages)
+                  Startup Registration (DSC/DIN, GST, etc.)
                 </li>
                 <li
                   style="
@@ -370,7 +370,7 @@
                       top: 3px;
                     "
                   ></i>
-                  Access to essential legal resources
+                  Basic Compliance Handling
                 </li>
                 <li
                   style="
@@ -391,7 +391,28 @@
                       top: 3px;
                     "
                   ></i>
-                  Email support
+                  DPIIT Registration & Benefits
+                </li>
+                <li
+                  style="
+                    margin-bottom: 12px;
+                    padding-left: 28px;
+                    position: relative;
+                    font-size: 15px;
+                    color: #666;
+                    text-align: left;
+                  "
+                >
+                  <i
+                    class="fas fa-check-circle"
+                    style="
+                      color: #c83136;
+                      position: absolute;
+                      left: 0;
+                      top: 3px;
+                    "
+                  ></i>
+                  Basic Trademark Protection
                 </li>
               </ul>
             </div>
@@ -418,7 +439,7 @@
             </div>
           </div>
 
-          <!-- Standard Plan -->
+          <!-- Medium Plan -->
           <div
             class="pricing-card"
             style="
@@ -461,7 +482,7 @@
               "
             >
               <h3 style="margin: 0; font-size: 22px; color: #333">
-                Standard Plan
+                Medium Plan
               </h3>
               <p
                 style="
@@ -500,7 +521,7 @@
                       top: 3px;
                     "
                   ></i>
-                  Everything in the Basic Plan
+                  Everything in Basic Plan
                 </li>
                 <li
                   style="
@@ -521,7 +542,7 @@
                       top: 3px;
                     "
                   ></i>
-                  Contract drafting & review (up to 10)
+                  Enhanced Compliance (DIN E-KYC Filing)
                 </li>
                 <li
                   style="
@@ -542,7 +563,7 @@
                       top: 3px;
                     "
                   ></i>
-                  Legal strategy for business growth
+                  MSME Registration
                 </li>
                 <li
                   style="
@@ -563,7 +584,7 @@
                       top: 3px;
                     "
                   ></i>
-                  Monthly legal check-ins
+                  Advanced Trademark Protection
                 </li>
                 <li
                   style="
@@ -584,7 +605,7 @@
                       top: 3px;
                     "
                   ></i>
-                  Priority email support
+                  5 Custom Policies & Agreements
                 </li>
               </ul>
             </div>
@@ -611,7 +632,7 @@
             </div>
           </div>
 
-          <!-- Premium Plan -->
+          <!-- Advanced Plan -->
           <div
             class="pricing-card"
             style="
@@ -636,7 +657,7 @@
               "
             >
               <h3 style="margin: 0; font-size: 22px; color: #333">
-                Premium Plan
+                Advance Plan
               </h3>
               <p
                 style="
@@ -675,7 +696,7 @@
                       top: 3px;
                     "
                   ></i>
-                  Everything in the Standard Plan
+                  Everything in Medium Plan
                 </li>
                 <li
                   style="
@@ -696,7 +717,7 @@
                       top: 3px;
                     "
                   ></i>
-                  Full legal representation for disputes
+                  Complete Compliance (ESIC & EPFO Filing)
                 </li>
                 <li
                   style="
@@ -717,7 +738,7 @@
                       top: 3px;
                     "
                   ></i>
-                  Custom contract creation & negotiation
+                  Payroll & Employment Support
                 </li>
                 <li
                   style="
@@ -738,7 +759,7 @@
                       top: 3px;
                     "
                   ></i>
-                  Risk management & compliance audits
+                  Premium Trademark Protection & Monitoring
                 </li>
                 <li
                   style="
@@ -759,7 +780,7 @@
                       top: 3px;
                     "
                   ></i>
-                  Specialized legal teams (tax, IP, etc.)
+                  In-House Legal Team & Dedicated Lawyer
                 </li>
                 <li
                   style="
@@ -780,7 +801,7 @@
                       top: 3px;
                     "
                   ></i>
-                  24/7 priority support
+                  10+ Custom Policies & Agreements
                 </li>
               </ul>
             </div>
