--- a/services.html
+++ b/services.html
@@ -218,9 +218,10 @@
     <div class="service-area pt-100">
       <div class="container">
         <div class="section-title">
-          <span>Our Services</span>
+          <span>Legal Excellence</span>
           <h2>
-            We Provide <span>Business Legal Solutions</span> With Proven Results
+            We Deliver <span>Corporate Legal Solutions</span> With Proven
+            Results
           </h2>
         </div>
 
@@ -230,19 +231,19 @@
               <a href="services.html">
                 <img
                   src="assets/img/services/business law.png"
-                  alt="Company Registration"
-                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Company+Registration'"
+                  alt="Corporate Formation"
+                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Corporate+Formation'"
                 />
               </a>
               <div class="service-text">
-                <i class="las la-file-contract"></i>
+                <i class="las la-building"></i>
                 <h3>
-                  <a href="services.html">Company <span>Registration</span></a>
+                  <a href="services.html">Corporate <span>Formation</span></a>
                 </h3>
                 <p>
-                  Complete registration for Pvt Ltd, LLP, OPC & Partnerships.
-                  Includes DIN, DSC, PAN processing and incorporation
-                  certificate filing.
+                  Strategic entity selection and formation for corporations,
+                  LLCs, and partnerships. Includes governance documents,
+                  shareholder agreements, and regulatory compliance.
                 </p>
               </div>
             </div>
@@ -253,21 +254,19 @@
               <a href="services.html">
                 <img
                   src="assets/img/business-img.jpg"
-                  alt="Trademark Registration"
-                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Trademark+Registration'"
+                  alt="Intellectual Property"
+                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Intellectual+Property'"
                 />
               </a>
               <div class="service-text">
-                <i class="las la-trademark"></i>
+                <i class="las la-shield-alt"></i>
                 <h3>
-                  <a href="services.html"
-                    >Trademark <span>Registration</span></a
-                  >
+                  <a href="services.html">Intellectual <span>Property</span></a>
                 </h3>
                 <p>
-                  Comprehensive brand protection including search, filing, and
-                  responding to examination reports for complete trademark
-                  security.
+                  Comprehensive IP portfolio management including trademarks,
+                  patents, copyrights, and trade secrets with strategic
+                  enforcement and monetization guidance.
                 </p>
               </div>
             </div>
@@ -278,18 +277,19 @@
               <a href="services.html">
                 <img
                   src="./assets/img/services/mca-comp.jpg"
-                  alt="MCA Compliance"
-                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Compliance'"
+                  alt="Regulatory Compliance"
+                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Regulatory+Compliance'"
                 />
               </a>
               <div class="service-text">
-                <i class="las la-clipboard-check"></i>
+                <i class="las la-balance-scale"></i>
                 <h3>
-                  <a href="services.html">MCA <span>Compliance</span></a>
+                  <a href="services.html">Regulatory <span>Compliance</span></a>
                 </h3>
                 <p>
-                  Annual ROC filings, form submissions and statutory compliance
-                  to maintain good standing and avoid government penalties.
+                  Proactive compliance management for SEC, FTC, and
+                  industry-specific regulations with audit preparation and risk
+                  mitigation strategies.
                 </p>
               </div>
             </div>
@@ -300,18 +300,19 @@
               <a href="services.html">
                 <img
                   src="./assets/img/services/legal-draft.jpg"
-                  alt="Legal Drafting"
-                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Legal+Drafting'"
+                  alt="Commercial Contracts"
+                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Commercial+Contracts'"
                 />
               </a>
               <div class="service-text">
-                <i class="las la-pen-fancy"></i>
+                <i class="las la-file-signature"></i>
                 <h3>
-                  <a href="services.html">Legal <span>Drafting</span></a>
+                  <a href="services.html">Commercial <span>Contracts</span></a>
                 </h3>
                 <p>
-                  Professionally drafted agreements, MoUs, NDAs and contracts
-                  tailored to your specific business operational requirements.
+                  Expertly crafted agreements including vendor contracts,
+                  licensing agreements, distribution arrangements, and strategic
+                  partnership documentation.
                 </p>
               </div>
             </div>
@@ -322,19 +323,21 @@
               <a href="services.html">
                 <img
                   src="./assets/img/services/patent-file.jpg"
-                  alt="Patent Filing"
-                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Patent+Filing'"
+                  alt="Mergers & Acquisitions"
+                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Mergers+%26+Acquisitions'"
                 />
               </a>
               <div class="service-text">
-                <i class="las la-lightbulb"></i>
+                <i class="las la-handshake"></i>
                 <h3>
-                  <a href="services.html">Patent <span>Filing</span></a>
+                  <a href="services.html"
+                    >Mergers & <span>Acquisitions</span></a
+                  >
                 </h3>
                 <p>
-                  Complete patent application services including provisional
-                  filing, complete specifications, and expert advisory on
-                  documentation.
+                  Comprehensive M&A services including due diligence,
+                  transaction structuring, negotiation support, and post-merger
+                  integration planning.
                 </p>
               </div>
             </div>
@@ -345,18 +348,19 @@
               <a href="services.html">
                 <img
                   src="./assets/img/services/msme-res.png"
-                  alt="MSME Registration"
-                  onerror="this.src='https://placehold.co/600x400/003366/white?text=MSME+Registration'"
+                  alt="Labor & Employment"
+                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Labor+%26+Employment'"
                 />
               </a>
               <div class="service-text">
-                <i class="las la-certificate"></i>
+                <i class="las la-users"></i>
                 <h3>
-                  <a href="services.html">MSME <span>Registration</span></a>
+                  <a href="services.html">Labor & <span>Employment</span></a>
                 </h3>
                 <p>
-                  Quick registration for Micro, Small & Medium Enterprises to
-                  avail government subsidies, credit benefits and incentives.
+                  Strategic employment counsel covering policy development,
+                  compliance training, dispute resolution, and workplace
+                  investigation management.
                 </p>
               </div>
             </div>
