--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                   <a href="contact.html" class="default-btn-one me-3"
                     >Talk to a legal expert</a
                   >
-                  <a href="about.html" class="default-btn-two">Get Started</a>
+                  <a href="joinus.html" class="default-btn-two">Join us </a>
                 </div>
               </div>
             </div>
