Added new  content

--- a/about-us.html
+++ b/about-us.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Engitech</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+    <title>Tripsparkmedia</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/logo.svg" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/flaticon.css" />
@@ -37,7 +37,7 @@
                             <div class="col-md-8">
                                 <ul class="topbar-info align-self-end clearfix">
                                     <li><a href="tel:7011665906"><i class="fas fa-phone-alt"></i> 7011665906</a></li>
-                                    <li><a href="mailto:engitech@mail.com"><i class="fas fa-envelope"></i>support@tripspark.com</a></li>
+                                    <li><a href="mailto:Tripsparkmedia@mail.com"><i class="fas fa-envelope"></i>support@tripspark.com</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -81,7 +81,7 @@
                     <div class="mlogo_wrapper clearfix">
                         <div class="mobile_logo">
                             <a href="index.html">
-                                <img src="images/logo.svg" alt="Engitech">
+                                <img src="images/logo.svg" alt="Tripsparkmedia">
                             </a>
                         </div>
                         <div id="mmenu_toggle">
@@ -124,11 +124,11 @@
                         <div class="col-lg-6 align-self-center mb-30 mb-lg-0">
                             <div class="ot-heading">
                                 <span>// what we offer</span>
-                                <h2 class="main-heading">Your Partner for <br> Software Innovation</h2>
+                                <h2 class="main-heading">Your Partner for <br> Marketing</h2>
                             </div>
                             <div class="space-5"></div>
-                            <p>Engitech is the partner of choice for many of the world’s leading enterprises, SMEs and technology challengers. We help businesses elevate their value through custom software development, product design, QA and consultancy services.</p>
-                            <p><em class="text-dark"><strong>We can help to maintain and modernize your IT infrastructure and solve various infrastructure-specific issues a business may face.</strong></em></p>
+                            <p>With years of experience working with travel agencies, we know what works and what doesn’t in digital marketing. Our team of experts is dedicated to helping you achieve your marketing goals through personalized strategies that deliver measurable results.</p>
+                            <p><em class="text-dark"><strong>We can help with  Tailored Solutions •	Data-Driven Approach and Data driven Tasks.</strong></em></p>
                             <div class="space-20"></div>
                             <div class="video-popup style-2">
                                 <div class="btn-inner">
@@ -144,7 +144,7 @@
                         <div class="col-lg-6">
                             <div class="row">
                                 <div class="col-lg-6 col-md-6">
-                                    <a class="ot-image-box v3 st1" href="it-services.html">
+                                    <a class="ot-image-box v3 st1" href="services.html">
                                         <div class="overlay">
                                             <h4>Our Mission</h4>
                                         </div>
@@ -152,7 +152,7 @@
                                     </a>
                                 </div>
                                 <div class="col-lg-6 col-md-6">
-                                    <a class="ot-image-box v3 st2" href="it-services.html">
+                                    <a class="ot-image-box v3 st2" href="services.html">
                                         <div class="overlay">
                                             <h4>Our Vision</h4>
                                         </div>
@@ -160,7 +160,7 @@
                                     </a>
                                 </div>
                                 <div class="col-lg-6 col-md-6">
-                                    <a class="ot-image-box v3 st3" href="it-services.html">
+                                    <a class="ot-image-box v3 st3" href="services.html">
                                         <div class="overlay">
                                             <h4>Our Philosophy</h4>
                                         </div>
@@ -168,7 +168,7 @@
                                     </a>
                                 </div>
                                 <div class="col-lg-6 col-md-6">
-                                    <a class="ot-image-box v3 st4 mb-0" href="it-services.html">
+                                    <a class="ot-image-box v3 st4 mb-0" href="services.html">
                                         <div class="overlay">
                                             <h4>Our Strategy</h4>
                                         </div>
@@ -292,23 +292,23 @@
                                     <h2 class="main-heading">What We Actually Do</h2>
                                 </div>
                                 <div class="tech-wrap">
-                                    <a class="tech-box" href="it-services.html">
+                                    <a class="tech-box" href="services.html">
                                         <div class="icon-main"><span class="flaticon-php"></span></div>
                                     </a>
-                                    <a class="tech-box" href="it-services.html">
+                                    <a class="tech-box" href="services.html">
                                         <div class="icon-main"><span class="flaticon-electron"></span></div>
                                     </a>
                                     <a class="tech-box" href="it.html">
                                         <div class="icon-main"><span class="flaticon-java"></span></div>
                                     </a>
-                                    <a class="tech-box" href="it-services.html">
+                                    <a class="tech-box" href="services.html">
                                         <div class="icon-main"><span class="flaticon-css"></span></div>
                                     </a>
                                 </div>
                                 <h5>PHP Website Development Services</h5>
-                                <p>Engitech is the partner of choice for many of the world’s leading enterprises, SMEs and technology challengers. We help businesses elevate their value through custom software development, product design, QA and consultancy services.</p>
+                                <p>Tripsparkmedia is the partner of choice for many of the world’s leading enterprises, SMEs and technology challengers. We help businesses elevate their value through custom software development, product design, QA and consultancy services.</p>
                                 <div class="ot-button">
-                                    <a href="it-services.html" class="btn-details"><i class="flaticon-right-arrow-1"></i> LEARN MORE</a>
+                                    <a href="services.html" class="btn-details"><i class="flaticon-right-arrow-1"></i> LEARN MORE</a>
                                 </div>
                             </div>
                         </div>
@@ -332,7 +332,7 @@
                         <div class="col-lg-3 col-md-6 no-padding">
                             <div class="team-wrap v3">
                                 <div class="team-thumb">
-                                    <img src="images/member1.jpg" alt="">                                 
+                                    <img src="images/2.png" alt="">                                 
                                     <div class="team-social flex-middle">
                                         <div>
                                             <a rel="nofollow" href="twitter.com" class="twitter"><i class="fab fa-twitter"></i></a>
@@ -343,7 +343,26 @@
                                     </div>  
                                 </div>
                                 <div class="team-info">
-                                    <h4>David Ferry</h4>
+                                    <h4>Tapan</h4>
+                                    <span>Co-Founder </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 no-padding">
+                            <div class="team-wrap v3">
+                                <div class="team-thumb">
+                                    <img src="images/4.png" alt="">                                 
+                                    <div class="team-social flex-middle">
+                                        <div>
+                                            <a rel="nofollow" href="twitter.com" class="twitter"><i class="fab fa-twitter"></i></a>
+                                            <a rel="nofollow" href="linkedin.com" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+                                            <a rel="nofollow" href="pinterest.com" class="pinterest"><i class="fab fa-pinterest-p"></i></a>
+                                            <a rel="nofollow" href="instagram.com" class="instagram"><i class="fab fa-instagram"></i></a>
+                                        </div>
+                                    </div>  
+                                </div>
+                                <div class="team-info">
+                                    <h4>Akshay Dogra</h4>
                                     <span>Co-Founder of company</span>
                                 </div>
                             </div>
@@ -351,7 +370,7 @@
                         <div class="col-lg-3 col-md-6 no-padding">
                             <div class="team-wrap v3">
                                 <div class="team-thumb">
-                                    <img src="images/member2.jpg" alt="">                                 
+                                    <img src="images/1.png" alt="">                                 
                                     <div class="team-social flex-middle">
                                         <div>
                                             <a rel="nofollow" href="twitter.com" class="twitter"><i class="fab fa-twitter"></i></a>
@@ -362,26 +381,7 @@
                                     </div>  
                                 </div>
                                 <div class="team-info">
-                                    <h4>Christina Torres</h4>
-                                    <span>Co-Founder of company</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 no-padding">
-                            <div class="team-wrap v3">
-                                <div class="team-thumb">
-                                    <img src="images/member3.jpg" alt="">                                 
-                                    <div class="team-social flex-middle">
-                                        <div>
-                                            <a rel="nofollow" href="twitter.com" class="twitter"><i class="fab fa-twitter"></i></a>
-                                            <a rel="nofollow" href="linkedin.com" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
-                                            <a rel="nofollow" href="pinterest.com" class="pinterest"><i class="fab fa-pinterest-p"></i></a>
-                                            <a rel="nofollow" href="instagram.com" class="instagram"><i class="fab fa-instagram"></i></a>
-                                        </div>
-                                    </div>  
-                                </div>
-                                <div class="team-info">
-                                    <h4>Amalia Bruno</h4>
+                                    <h4>Shobana Rajendran</h4>
                                     <span>CTO OF COMPANY</span>
                                 </div>
                             </div>
@@ -389,7 +389,7 @@
                         <div class="col-lg-3 col-md-6 no-padding">
                             <div class="team-wrap v3">
                                 <div class="team-thumb">
-                                    <img src="images/member4.jpg" alt="">                                 
+                                    <img src="images/3.png" alt="">                                 
                                     <div class="team-social flex-middle">
                                         <div>
                                             <a rel="nofollow" href="twitter.com" class="twitter"><i class="fab fa-twitter"></i></a>
@@ -400,7 +400,7 @@
                                     </div>  
                                 </div>
                                 <div class="team-info">
-                                    <h4>David Ferry</h4>
+                                    <h4>Neha Bhati</h4>
                                     <span>Co-Founder of company</span>
                                 </div>
                             </div>
@@ -468,7 +468,7 @@
                                 <div class="et-progress">
                                     <div class="ot-progress">
                                         <div class="overflow">
-                                            <span class="pname f-left">mobile development</span>
+                                            <span class="pname f-left">Social Media</span>
                                             <span class="ppercent f-right">70%</span>
                                         </div>
                                         <div class="iprogress">
@@ -477,7 +477,7 @@
                                     </div>
                                     <div class="ot-progress">
                                         <div class="overflow">
-                                            <span class="pname f-left">web development</span>
+                                            <span class="pname f-left">Lead Conversion</span>
                                             <span class="ppercent f-right">90%</span>
                                         </div>
                                         <div class="iprogress">
@@ -486,8 +486,8 @@
                                     </div>
                                     <div class="ot-progress">
                                         <div class="overflow">
-                                            <span class="pname f-left">ui/ux design</span>
-                                            <span class="ppercent f-right">60%</span>
+                                            <span class="pname f-left">Ads Planning</span>
+                                            <span class="ppercent f-right">90%</span>
                                         </div>
                                         <div class="iprogress">
                                             <div class="progress-bar" data-percent="60%"></div>
