--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Engitech</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+    <title>Tripsparkmedia</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/logo.svg" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/flaticon.css" />
@@ -37,7 +37,7 @@
                             <div class="col-md-8">
                                 <ul class="topbar-info align-self-end clearfix">
                                     <li><a href="tel:7011665906"><i class="fas fa-phone-alt"></i> 7011665906</a></li>
-                                    <li><a href="mailto:engitech@mail.com"><i class="fas fa-envelope"></i>support@tripspark.com</a></li>
+                                    <li><a href="mailto:Tripsparkmedia@mail.com"><i class="fas fa-envelope"></i>support@tripspark.com</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -81,7 +81,7 @@
                     <div class="mlogo_wrapper clearfix">
                         <div class="mobile_logo">
                             <a href="index.html">
-                                <img src="images/logo.svg" alt="Engitech">
+                                <img src="images/logo.svg" alt="Tripsparkmedia">
                             </a>
                         </div>
                         <div id="mmenu_toggle">
@@ -124,7 +124,7 @@
                         <div class="col-lg-6">
                             <div class="contact-left">
                                 <div class="ot-heading">
-                                    <span>// contact details</span>
+                                    <span> contact details</span>
                                     <h2 class="main-heading">Contact us</h2>
                                 </div>
                                 <div class="space-5"></div>
@@ -133,27 +133,29 @@
                                     <i class="flaticon-world-globe"></i>                    
                                     <div class="info-text">
                                         <h6>Our Address:</h6>
-                                        <p>411 University St, Seattle, USA</p>
+                                        <p>Two Horizon, Gurugram, 122002</p>
                                     </div>
                                 </div>
                                 <div class="contact-info box-style1">
                                     <i class="flaticon-envelope"></i>
                                     <div class="info-text">
                                         <h6>Our Mailbox:</h6>
-                                        <p>engitech@mail.net</p>
+                                        <p>support@tripsparkmedia.in</p>
                                     </div>
                                 </div>
                                 <div class="contact-info box-style1">
                                     <i class="flaticon-phone-1"></i>
                                     <div class="info-text">
                                         <h6>Our Phone:</h6>
-                                        <p>+1 -800-456-478-23</p>
+                                        <p>7011665906</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <form id="ajax-form" name="ajax-form" action="contact.php" method="post" class="wpcf7">
+                            <form  name="ajax-form"  class="wpcf7" action='https://api.web3forms.com/submit' method="POST" >
+                                <input type="hidden" name="access_key" value="af0b7193-e1ba-42f6-a435-db4fb28a9f4a">
+                                <input type="hidden" name="website" value="tripsparkmedia.life" />
                                 <div class="main-form">
                                     <h2>Ready to Get Started?</h2>
                                     <p class="font14">Your email address will not be published. Required fields are marked *</p>
