--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -251,7 +251,7 @@
                             <div class="icon-box-s2 s2 border-s1 bg bg5 text-center">
                                 <div class="icon-main"><span class="flaticon-report-1"></span></div>
                                 <div class="content-box">
-                                    <h5><a href="it-services.html">IT Counsultancy</a></h5>
+                                    <h5><a href="services.html">IT Counsultancy</a></h5>
                                     <p>Trust our top minds to eliminate workflow pain points, implement new tech, and consolidate app.</p>
                                 </div>
                             </div>
@@ -260,7 +260,7 @@
                             <div class="icon-box-s2 s2 border-s1 bg bg6 text-center">
                                 <div class="icon-main"><span class="flaticon-best"></span></div>
                                 <div class="content-box">
-                                    <h5><a href="it-services.html">Dedicated Team</a></h5>
+                                    <h5><a href="services.html">Dedicated Team</a></h5>
                                     <p>Over the past decade, our customers succeeded by leveraging Intellectsoft’s process of building, motivating.</p>
                                 </div>
                             </div>
@@ -426,19 +426,19 @@
                             </a>
                         </div>
                         <div class="col-lg-2 col-md-4 col-sm-6 col-12">
-                            <a class="tech-box text-center" href="it-services.html">
+                            <a class="tech-box text-center" href="services.html">
                                 <div class="icon-main"><span class="flaticon-iot"></span></div>
                                 <h5>IOT</h5>
                             </a>
                         </div>
                         <div class="col-lg-2 col-md-4 col-sm-6 col-12">
-                            <a class="tech-box text-center" href="it-services.html">
+                            <a class="tech-box text-center" href="services.html">
                                 <div class="icon-main"><span class="flaticon-time-and-date"></span></div>
                                 <h5>Wearalables</h5>
                             </a>
                         </div>
                         <div class="col-lg-2 col-md-4 col-sm-6 col-12">
-                            <a class="tech-box text-center" href="it-services.html">
+                            <a class="tech-box text-center" href="services.html">
                                 <div class="icon-main"><span class="flaticon-tv"></span></div>
                                 <h5>TV</h5>
                             </a>
