--- a/our-team.html
+++ b/our-team.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Engitech</title>
+    <title>Tripsparkmedia</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -28,7 +28,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <ul class="topbar-info">
-                                    <li><i class="fas fa-envelope"></i><a href="mailto:engitech@mail.net"> engitech@mail.net</a></li>
+                                    <li><i class="fas fa-envelope"></i><a href="mailto:Tripsparkmedia@mail.net"> Tripsparkmedia@mail.net</a></li>
                                     <li><i class="fas fa-clock"></i> Mon - Sat: 8.00 am - 7.00 pm</li>
                                 </ul>
                             </div>
@@ -57,7 +57,7 @@
                                 <div class="octf-col logo-col">
                                     <div id="site-logo" class="site-logo">
                                         <a href="index.html">
-                                            <img src="images/logo.svg" alt="Engitech" class="">
+                                            <img src="images/logo.svg" alt="Tripsparkmedia" class="">
                                         </a>
                                     </div>
                                 </div>
@@ -88,7 +88,7 @@
                                             <li class="menu-item-has-children current-menu-item current-menu-ancestor"><a href="#">Company</a>
                                                 <ul class="sub-menu">
                                                     <li><a href="about-us.html">About us</a></li>
-                                                    <li><a href="why-choose-us.html">Why Choose Us</a></li>
+                                                    <li><a href="contact.html">Why Choose Us</a></li>
                                                     <li class="current-menu-item"><a href="our-team.html">Our team</a></li>
                                                     <li><a href="single-team.html">Single team</a></li>
                                                     <li class="menu-item-has-children"><a href="shop.html">Shop</a>
@@ -204,7 +204,7 @@
                     <div class="mlogo_wrapper clearfix">
                         <div class="mobile_logo">
                             <a href="index.html">
-                                <img src="images/logo.svg" alt="Engitech">
+                                <img src="images/logo.svg" alt="Tripsparkmedia">
                             </a>
                         </div>
                         <div id="mmenu_toggle">
@@ -238,7 +238,7 @@
                                 <li class="menu-item-has-children current-menu-item current-menu-ancestor"><a href="#">Company</a>
                                     <ul class="sub-menu">
                                         <li><a href="about-us.html">About us</a></li>
-                                        <li><a href="why-choose-us.html">Why Choose Us</a></li>
+                                        <li><a href="contact.html">Why Choose Us</a></li>
                                         <li class="current-menu-item"><a href="our-team.html">Our team</a></li>
                                         <li><a href="single-team.html">Single team</a></li>
                                         <li class="menu-item-has-children"><a href="shop.html">Shop</a>
@@ -321,7 +321,7 @@
                 <div class="container-fluid">
                     <div class="row justify-content-center">
                         <div class="col-lg-12">
-                            <div class="img-Engitech">
+                            <div class="img-Tripsparkmedia">
                                 <img src="images/engtech.png" alt="" class="">
                             </div>
                         </div>
@@ -641,7 +641,7 @@
                         </ul>
                     </div>
                     <div class="space-20"></div>
-                    <p class="copyright-text v2">Copyright © 2020 Engitech by ThemeModern. All Rights Reserved.</p>
+                    <p class="copyright-text v2">Copyright © 2020 Tripsparkmedia by ThemeModern. All Rights Reserved.</p>
                     <div class="space-26"></div>
                     <div class="ft-list-icon">
                         <a class="twitter" href="twitter.com"><i class="fab fa-twitter"></i></a>
