--- a/about-us.html
+++ b/about-us.html
@@ -65,6 +65,7 @@
                                             </li>
                                             <li class="menu-item current-menu-item current-menu-ancestor"><a href="about-us.html">About us</a></li>
                                             <li><a href="services.html">Services</a></li>
+                                            <li><a href="pricing.html">Pricing</a></li>
                                           
                                             <li><a href="contact.html">Contacts</a></li>
                                         </ul>
@@ -97,7 +98,7 @@
                                 </li>
                                 <li><a href="about-us.html">About us</a></li>
                                 <li><a href="services.html">Services</a></li>
-                              
+                                <li><a href="pricing.html">Pricing</a></li>
                                 <li><a href="contact.html">Contacts</a></li>
                             </ul>
                         </div>
