--- a/services.html
+++ b/services.html
@@ -65,7 +65,7 @@
                                             </li>
                                             <li><a href="about-us.html">About us</a></li>
                                             <li class="menu-item current-menu-item current-menu-ancestor"><a href="services.html">Services</a></li>
-                                          
+                                            <li><a href="pricing.html">Pricing</a></li>
                                             <li><a href="contact.html">Contacts</a></li>
                                         </ul>
                                     </nav>
@@ -97,7 +97,7 @@
                                 </li>
                                 <li><a href="about-us.html">About us</a></li>
                                 <li><a href="services.html">Services</a></li>
-                              
+                                <li><a href="pricing.html">Pricing</a></li>
                                 <li><a href="contact.html">Contacts</a></li>
                             </ul>
                         </div>
