--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
                     <h5>Data-Driven Results</h5>
                     <div>
                       Real-time analytics and clear metrics to track performance
-                      and optimize every marketing dollar spent.
+                      and optimize every marketing dollar.
                     </div>
                     <a href="#" class="btn-details"
                       ><i class="flaticon-right-arrow-1"></i> LEARN MORE</a
